# elixir

./: .gitignore  .zenodo.json  README.md  manuscript.md  outline.md  pyproject.toml  requirements.txt  review.md
experiments/: README.md  SESSION_SYNTHESIS_2026-05-21.md  domain_counts.md  domain_counts_v2.md  evidence_synthesis.md  prisma_search_v2.py  pubmed_results_v2.csv  screening_results.csv  screening_v2.py  search_comparison.md
experiments/_lib/: import_screening.py  jsonl_dedup.py  parse_json.py
experiments/_monitoring/: dashboard.py  heartbeat.sh  make_per_call_dataset.py  per_call_dataset.csv
experiments/archive/: prisma_flow_v1.md  prisma_search_v1.py  pubmed_results_v1.csv  top_papers_by_domain_v1.md
experiments/d3_design_audit/: analyze.py  protocol.md  run.py  state.jsonl
experiments/eligible_recount/: recount.py
experiments/ghi_face_validity/: analyze.py  compare_v1_v2.py  criteria_v1.txt  items_v1.json  items_v2.json  prompt_v1.txt  protocol.md  run.py  state.jsonl  state_v2.jsonl
experiments/llm_second_reviewer/: analyze.py  analyze_reasons.py  analyze_self_consistency.py  convergent_disagreements.csv  criteria_v1.txt  prompt_v1.txt  protocol.md  run.py  run_20260520T175555Z_haiku.jsonl  run_20260520T175705Z_haiku.jsonl  run_20260520T180826Z_sonnet.jsonl.aborted-sonnet-4-5  run_20260520T181323Z_sonnet.jsonl  run_20260520T181629Z_opus.jsonl  run_self_consistency.py  sc_state.jsonl
experiments/openalex_d1_d4/: analyze.py  dedup.py  llm_recheck.py  llm_recheck_state.jsonl  (+2 more)
literature/: README.md
paper/: main.tex
planning/: decisions.md
(+64 files in other folders)
